Fix: html에 scrollbar gutter 속성 추가(모달창 대응)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,6 +146,7 @@ html {
        tab-size: 4;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: transparent;
+  scrollbar-gutter: stable;
 }
 
 body {
