--- a/assets/scss/base/_preset.scss
+++ b/assets/scss/base/_preset.scss
@@ -11,6 +11,7 @@ html {
   tab-size: 4;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: transparent;
+  scrollbar-gutter: stable;
 }
 
 body {
